# cloudio

./: .gitignore  README.md  pyproject.toml  pytest.ini
cloudio/: __init__.py  cached_path.py  config.py  open.py  remove.py  s3.py  tqdm.py  upload.py  utils.py
tests/: conftest.py  test_common.py  test_config.py  test_open.py  test_remove.py  test_s3.py  test_upload.py
